# totalcmd-mp

./: BUILD.md  PLANNING_CHANGES.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  start.sh  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: build_debian.sh  build_macos.sh  build_windows.ps1  build_windows_from_linux.sh  install_dev_desktop.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: connections.rs  editor.rs  git.rs  local_fs.rs  mod.rs  remote_fs.rs  tls_inspect.rs  transfer.rs  window_layout.rs
src-tauri/src/models/: connection.rs  file_entry.rs  mod.rs
src-tauri/src/services/: connection_manager.rs  ftp.rs  local_fs.rs  mod.rs  sftp.rs
src/components/dialogs/: CertDetails.tsx  ChmodDialog.tsx  ConnectionManagerDialog.tsx  DeleteConfirmDialog.tsx  DirCompareDialog.tsx  DriveSelector.tsx  FileViewerDialog.tsx  HelpDialog.tsx  MkDirDialog.tsx  MultiRenameDialog.tsx  QuickConnectDialog.tsx  QuickFilterDialog.tsx  RenameDialog.tsx  SearchDialog.tsx  SettingsDialog.tsx
src/components/editor/: EditorWindow.tsx
src/components/git/: GitPanel.tsx
src/components/layout/: FunctionKeyBar.tsx  MenuBar.tsx  StatusBar.tsx  TitleBar.tsx  Toolbar.tsx  TransferPanel.tsx
src/components/panel/: FileList.tsx  FileListHeader.tsx  Panel.tsx  PathBar.tsx  TabBar.tsx
src/components/transfer/: TransferProgress.tsx
src/hooks/: useKeyboardShortcuts.ts
src/services/: connections.ts  editor.ts  editorLauncher.ts  git.ts  localFs.ts  transfer.ts
src/stores/: connectionStore.ts  gitStore.ts  panelStore.ts  settingsStore.ts  transferStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: formatters.ts
