[package]
name = "totalcmd-mp"
version = "0.1.0"
description = "Multiplatform dual-panel FTP/SFTP client inspired by Total Commander"
authors = ["samuele-brusegan"]
license = "MIT"
repository = "https://github.com/samuele-brusegan/totalcmd-mp"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
walkdir = "2"
