[package]
name = "totalcmd-mp"
version = "0.1.0"
description = "Multiplatform dual-panel FTP/SFTP client inspired by Total Commander"
authors = ["samuele-brusegan"]
license = "MIT"
repository = "https://github.com/samuele-brusegan/totalcmd-mp"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
walkdir = "2"
suppaftp = { version = "6", features = ["native-tls"] }
ssh2 = "0.9"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
native-tls = "0.2"
shellexpand = "3"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }
x509-parser = "0.16"
sha2 = "0.10"
shell-words = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
